manifests/overlays/dev/network-policies/services/carts-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: carts-netpol
  namespace: sock-shop
  labels:
    app: carts
    policy: application
    tier: backend
spec:
  podSelector:
    matchLabels:
      name: carts
  
  policyTypes:
  - Ingress
  - Egress
  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - protocol: TCP
      port: 80
  
  egress:
  
  - to:
    - podSelector:
        matchLabels:
          name: carts-db
    ports:
    - protocol: TCP
      port: 27017
