manifests/overlays/dev/network-policies/services/queue-master-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: queue-master-netpol
  namespace: sock-shop
  labels:
    app: queue-master
    policy: application
    tier: backend
spec:
  podSelector:
    matchLabels:
      name: queue-master
  
  policyTypes:
  - Ingress
  - Egress
  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - protocol: TCP
      port: 80
  
  egress:
  
  - to:
    - podSelector:
        matchLabels:
          name: rabbitmq
    ports:
    - protocol: TCP
      port: 5672  # AMQP port
